fix: card alignment in home page

--- a/CA4/miobook/frontend/MioBook/app/components/styles.css
+++ b/CA4/miobook/frontend/MioBook/app/components/styles.css
@@ -121,8 +121,6 @@ button.accordion-button {
 .book-card {
     width: 200px;
     height: 320px;
-    top: 205px;
-    left: 182px;
     border-radius: 16px;
 }
   
